--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-to-print": "^2.12.6",
     "redux": "^4.0.5",
     "redux-localstorage": "^0.4.1",
     "redux-persist": "^6.0.0",
