--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.21.3",
+    "lodash": "^4.17.21",
     "material-ui-popup-state": "^1.8.3",
     "moment": "^2.29.1",
     "react": "^16.12.0",
